--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -15,7 +15,7 @@
       {{ with .Params.description }}
         <div class="description">
           <strong>Description:</strong> 
-	  <span class="description">{{ . }}</span>
+	  <span class="description"></span>
         </div>
       {{ end }}
 
